# marketplace-api

./: .dockerignore  .env.example  .gitignore  .isort.cfg  Dockerfile  Makefile  Readme.md  manage.py  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/products/: filters.py  handlers.py  schemas.py
core/apps/common/: containers.py  enums.py  exceptions.py  models.py
core/apps/customers/: admin.py  entities.py  models.py
core/apps/customers/exceptions/: codes.py
core/apps/customers/migrations/: 0001_initial.py
core/apps/customers/services/: auth.py  codes.py  customers.py  sender.py
core/apps/products/: admin.py  apps.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_review.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/apps/products/services/: products.py
core/project/: asgi.py  containers.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
